--- a/app.yml
+++ b/app.yml
@@ -34,11 +34,16 @@
       src: .service
       dest: /etc/systemd/system/app.service
   - name: start systemd app service
-    systemd: name=app.service state=restarted enabled=yes
+    systemd:
+      name: app.service
+      state: restarted
+      enabled: yes
+
   - name: template nginx site config
     template:
       src: .nginx
       dest: /etc/nginx/sites-available/app
+
   - name: remove default nginx site config
     file: path=/etc/nginx/sites-enabled/default state=absent
   # - command: mv /etc/nginx/sites-enabled/default /tmp/nginx.sites-enabled.default
