--- a/app.yml
+++ b/app.yml
@@ -8,11 +8,9 @@
   - name: install packages
     apt: name={{item}} state=installed
     with_items:
-#      - tree         # Optional
-      - python-pip   # Optional
-      - python-dev   # Optional
-#      - python3-pip
-#      - python3-dev
+      - virtualenv
+      - python-pip
+      - python-dev
       - nginx
 
 - hosts: all
